# HealthIntel_Suplementar

./: .env.exemplo  .env.hml.example  .env.hml.exemplo  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  Makefile  README.md  TEST_DEPLOY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  fase4-ci.yml  load-test.yml
api/app/: database.py  dependencia.py  main.py
api/tests/: conftest.py
docs/: CHANGELOG.md  catalogo_datasets.md  catalogo_endpoints.md  dbt_catalog_v1.0.0.json  dbt_catalog_v2.0.0.json  dbt_manifest_v1.0.0.json  dbt_manifest_v2.0.0.json  healthintel_suplementar_prd_final.md  plano_expansao_dados.md
frontend/: .env.example  package.json
healthintel_dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
infra/: docker-compose.hml.yml  docker-compose.yml
ingestao/: README.md
mcp_server/: README.md  app.yaml  pyproject.toml  requirements.txt
mcp_server/server/: main.py
scripts/: airflow_unpause_consumo_ans.sh  backfill_diops_historico.py  backfill_glosa_historico.py  bootstrap_layout_registry_beneficiarios_cobertura.py  bootstrap_layout_registry_cadop.py  bootstrap_layout_registry_cnes.py  bootstrap_layout_registry_financeiro.py  bootstrap_layout_registry_financeiro_v2.py  bootstrap_layout_registry_idss.py  bootstrap_layout_registry_igr.py  bootstrap_layout_registry_nip.py  bootstrap_layout_registry_precificacao_ntrp.py  bootstrap_layout_registry_produtos_planos.py  bootstrap_layout_registry_rede.py  bootstrap_layout_registry_rede_prestadores.py  bootstrap_layout_registry_regulatorio.py  bootstrap_layout_registry_regulatorio_v2.py  bootstrap_layout_registry_regulatorios_complementares.py  bootstrap_layout_registry_ressarcimento_sus.py  bootstrap_layout_registry_sib.py  bootstrap_layout_registry_sip_delta.py  bootstrap_layout_registry_tiss.py  bootstrap_layout_registry_tiss_subfamilias.py  bootstrap_layout_registry_tuss_oficial.py  carregar_versao_vigente.py  check_dbt_docs_descriptions.py  check_scaffold.sh  elt_all_ans.py  elt_discover_ans.py  elt_extract_ans.py  elt_load_ans.py  elt_status_ans.py  fechar_ciclo_billing.py  generate_reference_seeds.py  gerar_seeds_tuss_rol.py  materializar_regulatorio_generico.py  monitor_disco.sh  run_load_test.sh  seed_dados_completos.py  seed_demo_cadop.py  (+30 more)
shared/: README.md
testes/: README.md  conftest.py
(+1031 files in other folders)
