[project]
name = "healthintel-suplementar"
version = "0.1.0"
description = "Monorepo base da plataforma HealthIntel Suplementar"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "redis>=5.0.4,<6.0.0",
    "motor>=3.4.0,<4.0.0",
    "pymongo>=4.7.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "prometheus-fastapi-instrumentator>=0.21.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "stripe>=8.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "sqlfluff>=3.0.7,<4.0.0",
    "sqlfluff-templater-dbt>=3.0.7,<4.0.0",
    "alembic>=1.13.1,<2.0.0",
    "locust>=2.29.0,<3.0.0",
    "dbt-core>=1.8.0,<2.0.0",
    "dbt-postgres>=1.8.0,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "shared/python"]
testpaths = ["api/tests", "ingestao/tests", "testes"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["healthintel_dbt/dbt_packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/seed_dados_completos.py" = ["E501"]
"scripts/smoke_premium.py" = ["E501"]
"api/tests/integration/test_premium.py" = ["E501"]
"testes/regressao/test_endpoints_fase5.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "shared/python"]
include = ["api*", "ingestao*", "mongo_layout_service*", "shared*", "healthintel_quality*"]
